--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 % IC
 
 @article{Goodenough:2009gk,
@@ -1136,21 +1137,22 @@ URL = {http://dx.doi.org/10.1093/mnras/stt1045},
       reportNumber   = "IPPP-16-10",
       SLACcitation   = "%%CITATION = ARXIV:1602.02243;%%"
 }
-@article{Bhattacharya1991,
-abstract = {The contribution of millisecond pulsars to the diffuse$\backslash$ngamma-ray background of the Galaxy is estimated, and it is shown that a$\backslash$nsignificant fraction of the Galactic background may originate from them. A$\backslash$nsmall number of the unidentified COS-B point sources may, in fact, be$\backslash$nmillisecond pulsars. It is argued that several hundred millisecond$\backslash$npulsars may be detectable as point sources by the GRO satellite.},
-author = {Bhattacharya, D. and Srinivasan, G},
-doi = {10.1007/BF02709769},
-issn = {02506335},
-journal = {Journal of Astrophysics and Astronomy},
-keywords = {Pulsars,diffuse gamma-ray background,gamma-ray emission,millisecond},
-month = {mar},
-number = {1},
-pages = {17--25},
-publisher = {Springer India},
-title = {{Gamma rays from millisecond pulsars}},
-url = {http://link.springer.com/10.1007/BF02709769},
-volume = {12},
-year = {1991}
+
+@Article{Bhattacharya1991,
+  author    = {Bhattacharya, D. and Srinivasan, G},
+  journal   = {Journal of Astrophysics and Astronomy},
+  title     = {{Gamma rays from millisecond pulsars}},
+  year      = {1991},
+  issn      = {02506335},
+  month     = {mar},
+  number    = {1},
+  pages     = {17--25},
+  volume    = {12},
+  abstract  = {The contribution of millisecond pulsars to the diffuse$\backslash$ngamma-ray background of the Galaxy is estimated, and it is shown that a$\backslash$nsignificant fraction of the Galactic background may originate from them. A$\backslash$nsmall number of the unidentified COS-B point sources may, in fact, be$\backslash$nmillisecond pulsars. It is argued that several hundred millisecond$\backslash$npulsars may be detectable as point sources by the GRO satellite.},
+  doi       = {10.1007/BF02709769},
+  keywords  = {Pulsars, diffuse gamma-ray background, gamma-ray emission, millisecond},
+  publisher = {Springer India},
+  url       = {http://link.springer.com/10.1007/BF02709769},
 }
 @article{TheFermi-LAT:2013ssa,
       author         = "Abdo, A. A. and others",
@@ -1340,18 +1342,17 @@ year = {1991}
       SLACcitation   = "%%CITATION = ARXIV:1008.3703;%%"
 }
 
-@INPROCEEDINGS{1995ASPC...80..507H,
-   author = {{Heiles}, C.},
-    title = "{The Galactic B-Field (GBF)}",
-booktitle = {The Physics of the Interstellar Medium and Intergalactic Medium},
-     year = 1995,
-   series = {Astronomical Society of the Pacific Conference Series},
-   volume = 80,
-   editor = {{Ferrara}, A. and {McKee}, C.~F. and {Heiles}, C. and {Shapiro}, P.~R.
-	},
-    pages = {507},
-   adsurl = {http://adsabs.harvard.edu/abs/1995ASPC...80..507H},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@InProceedings{1995ASPC...80..507H,
+  author    = {{Heiles}, C.},
+  booktitle = {The Physics of the Interstellar Medium and Intergalactic Medium},
+  title     = {{The Galactic B-Field (GBF)}},
+  year      = {1995},
+  editor    = {{Ferrara}, A. and {McKee}, C.~F. and {Heiles}, C. and {Shapiro}, P.~R.},
+  pages     = {507},
+  series    = {Astronomical Society of the Pacific Conference Series},
+  volume    = {80},
+  adsnote   = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl    = {http://adsabs.harvard.edu/abs/1995ASPC...80..507H},
 }
 
 @ARTICLE{2001SSRv...99..243B,
@@ -1529,33 +1530,31 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
-@article{Aguilar:2021tos,
-    author = "Aguilar, M. and others",
-    collaboration = "AMS",
-    title = "{The Alpha Magnetic Spectrometer (AMS) on the international space station: Part II \textemdash{} Results from the first seven years}",
-    doi = "10.1016/j.physrep.2020.09.003",
-    journal = "Phys. Rept.",
-    volume = "894",
-    pages = "1--116",
-    year = "2021"
+@Article{Aguilar:2021tos,
+  author        = {M. Aguilar and L. Ali Cavasonza and G. Ambrosi and L. Arruda and N. Attig and F. Barao and L. Barrin and A. Bartoloni and S. Ba{\c{s}}e{\u{g}}mez-du Pree and J. Bates and R. Battiston and M. Behlmann and B. Beischer and J. Berdugo and B. Bertucci and V. Bindi and W. de Boer and K. Bollweg and B. Borgia and M.J. Boschini and M. Bourquin and E.F. Bueno and J. Burger and W.J. Burger and S. Burmeister and X.D. Cai and M. Capell and J. Casaus and G. Castellini and F. Cervelli and Y.H. Chang and G.M. Chen and H.S. Chen and Y. Chen and L. Cheng and H.Y. Chou and S. Chouridou and V. Choutko and C.H. Chung and C. Clark and G. Coignet and C. Consolandi and A. Contin and C. Corti and Z. Cui and K. Dadzie and Y.M. Dai and C. Delgado and S. Della Torre and M.B. Demirköz and L. Derome and S. Di Falco and V. Di Felice and C. D{\'{\i}}az and F. Dimiccoli and P. von Doetinchem and F. Dong and F. Donnini and M. Duranti and A. Egorov and A. Eline and J. Feng and E. Fiandrini and P. Fisher and V. Formato and C. Freeman and Y. Galaktionov and C. G{\'{a}}mez and R.J. Garc{\'{\i}}a-L{\'{o}}pez and C. Gargiulo and H. Gast and I. Gebauer and M. Gervasi and F. Giovacchini and D.M. G{\'{o}}mez-Coral and J. Gong and C. Goy and V. Grabski and D. Grandi and M. Graziani and K.H. Guo and S. Haino and K.C. Han and R.K. Hashmani and Z.H. He and B. Heber and T.H. Hsieh and J.Y. Hu and Z.C. Huang and W. Hungerford and M. Incagli and W.Y. Jang and Yi Jia and H. Jinchi and K. Kanishev and B. Khiali and G.N. Kim and Th. Kirn and M. Konyushikhin and O. Kounina and A. Kounine and V. Koutsenko and A. Kuhlman and A. Kulemzin and G. La Vacca and E. Laudi and G. Laurenti and I. Lazzizzera and A. Lebedev and H.T. Lee and S.C. Lee and C. Leluc and J.Q. Li and M. Li and Q. Li and S. Li and T.X. Li and Z.H. Li and C. Light and C.H. Lin and T. Lippert and Z. Liu and S.Q. Lu and Y.S. Lu and K. Luebelsmeyer and J.Z. Luo and S.S. Lyu and F. Machate and C. Ma{\~{n}}{\'{a}} and J. Mar{\'{\i}}n and J. Marquardt and T. Martin and G. Mart{\'{\i}}nez and N. Masi and D. Maurin and A. Menchaca-Rocha and Q. Meng and D.C. Mo and M. Molero and P. Mott and L. Mussolin and J.Q. Ni and N. Nikonov and F. Nozzoli and A. Oliva and M. Orcinha and M. Palermo and F. Palmonari and M. Paniccia and A. Pashnin and M. Pauluzzi and S. Pensotti and H.D. Phan and V. Plyaskin and M. Pohl and S. Porter and X.M. Qi and X. Qin and Z.Y. Qu and L. Quadrani and P.G. Rancoita and D. Rapin and A. Reina Conde and S. Rosier-Lees and A. Rozhkov and D. Rozza and R. Sagdeev and S. Schael and S.M. Schmidt and A. Schulz von Dratzig and G. Schwering and E.S. Seo and B.S. Shan and J.Y. Shi and T. Siedenburg and C. Solano and J.W. Song and R. Sonnabend and Q. Sun and Z.T. Sun and M. Tacconi and X.W. Tang and Z.C. Tang and J. Tian and Samuel C.C. Ting and S.M. Ting and N. Tomassetti and J. Torsti and C. Tüysüz and T. Urban and I. Usoskin and V. Vagelli and R. Vainio and E. Valente and E. Valtonen and M. V{\'{a}}zquez Acosta and M. Vecchi and M. Velasco and J.P. Vialle and L.Q. Wang and N.H. Wang and Q.L. Wang and S. Wang and X. Wang and Z.X. Wang and J. Wei and Z.L. Weng and H. Wu and R.Q. Xiong and W. Xu and Q. Yan and Y. Yang and H. Yi and Y.J. Yu and Z.Q. Yu and M. Zannoni and C. Zhang and F. Zhang and F.Z. Zhang and J.H. Zhang and Z. Zhang and F. Zhao and Z.M. Zheng and H.L. Zhuang and V. Zhukov and A. Zichichi and N. Zimmermann and P. Zuccon},
+  journal       = {Physics Reports},
+  title         = {The Alpha Magnetic Spectrometer ({AMS}) on the international space station: Part {II} {\textemdash}~Results from the first seven years},
+  year          = {2021},
+  month         = feb,
+  pages         = {1--116},
+  volume        = {894},
+  collaboration = {AMS},
+  doi           = {10.1016/j.physrep.2020.09.003},
+  publisher     = {Elsevier {BV}},
 }
 
-@ARTICLE{Calore:2021bty,
-       author = {{Calore}, Francesca and {Donato}, Fiorenza and {Manconi}, Silvia},
-        title = "{Dissecting the inner Galaxy with $\gamma$-ray pixel count statistics}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Phenomenology},
-         year = 2021,
-        month = feb,
-          eid = {arXiv:2102.12497},
-        pages = {arXiv:2102.12497},
-archivePrefix = {arXiv},
-       eprint = {2102.12497},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210212497C},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@Article{Calore:2021bty,
+  author        = {{Calore}, Francesca and {Donato}, Fiorenza and {Manconi}, Silvia},
+  title         = {Dissecting the inner Galaxy with $\gamma$-ray pixel count statistics},
+  year          = {2021},
+  month         = feb,
+  abstract      = {We combine adaptive template fitting and pixel count statistics in order to assess the nature of the Galactic center excess in Fermi-LAT data. We reconstruct the flux distribution of point sources in the inner Galaxy well below the Fermi-LAT detection threshold, and measure their radial and longitudinal profiles. Point sources and diffuse emission from the Galactic bulge each contributes $\mathcal{O}$(10\%) of the total emission therein, disclosing a sub-threshold point-source contribution to the Galactic center excess.},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2021arXiv210212497C},
+  archiveprefix = {arXiv},
+  eid           = {arXiv:2102.12497},
+  eprint        = {2102.12497},
+  primaryclass  = {astro-ph.HE},
 }
 
 
@@ -2836,21 +2835,19 @@ archivePrefix = {arXiv},
       SLACcitation   = "%%CITATION = ARXIV:1202.1034;%%"
 }
 
-@ARTICLE{kalberla2005,
-   author = {{Kalberla}, P.~M.~W. and {Burton}, W.~B. and {Hartmann}, D. and 
-	{Arnal}, E.~M. and {Bajaja}, E. and {Morras}, R. and {P{\"o}ppel}, W.~G.~L.
-	},
-    title = "{The Leiden/Argentine/Bonn (LAB) Survey of Galactic HI. Final data release of the combined LDS and IAR surveys with improved stray-radiation corrections}",
-  journal = {Astron. \& Astrophys.},
-   eprint = {astro-ph/0504140},
- keywords = {surveys, radio lines: ISM, Galaxy: structure},
-     year = 2005,
-    month = sep,
-   volume = 440,
-    pages = {775-782},
-      doi = {10.1051/0004-6361:20041864},
-   adsurl = {http://adsabs.harvard.edu/abs/2005A%26A...440..775K},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@Article{kalberla2005,
+  author   = {{Kalberla}, P.~M.~W. and {Burton}, W.~B. and {Hartmann}, D. and {Arnal}, E.~M. and {Bajaja}, E. and {Morras}, R. and {P{\"o}ppel}, W.~G.~L.},
+  journal  = {Astron. \& Astrophys.},
+  title    = {{The Leiden/Argentine/Bonn (LAB) Survey of Galactic HI. Final data release of the combined LDS and IAR surveys with improved stray-radiation corrections}},
+  year     = {2005},
+  month    = sep,
+  pages    = {775-782},
+  volume   = {440},
+  adsnote  = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl   = {http://adsabs.harvard.edu/abs/2005A%26A...440..775K},
+  doi      = {10.1051/0004-6361:20041864},
+  eprint   = {astro-ph/0504140},
+  keywords = {surveys, radio lines: ISM, Galaxy: structure},
 }
 
 @article{Bartels:2015aea,
@@ -3242,24 +3239,22 @@ Schdel and Hirofumi Hatano and Shuji Sato and Koji Sugitani and Takuya Suenaga a
     year = "2007"
 }
 
-@ARTICLE{R12,
-   author = {{Robitaille}, T.~P. and {Churchwell}, E. and {Benjamin}, R.~A. and 
-	{Whitney}, B.~A. and {Wood}, K. and {Babler}, B.~L. and {Meade}, M.~R.
-	},
-    title = "{A self-consistent model of Galactic stellar and dust infrared emission and the abundance of polycyclic aromatic hydrocarbons}",
-  journal = {A\&A },
-archivePrefix = "arXiv",
-   eprint = {1208.4606},
- primaryClass = "astro-ph.GA",
- keywords = {radiative transfer, galaxies: structure, infrared: ISM},
-     year = 2012,
-    month = sep,
-   volume = 545,
-      eid = {A39},
-    pages = {A39},
-      doi = {10.1051/0004-6361/201219073},
-   adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...545A..39R},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@Article{R12,
+  author        = {{Robitaille}, T.~P. and {Churchwell}, E. and {Benjamin}, R.~A. and {Whitney}, B.~A. and {Wood}, K. and {Babler}, B.~L. and {Meade}, M.~R.},
+  journal       = {A\&A},
+  title         = {{A self-consistent model of Galactic stellar and dust infrared emission and the abundance of polycyclic aromatic hydrocarbons}},
+  year          = {2012},
+  month         = sep,
+  pages         = {A39},
+  volume        = {545},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl        = {http://adsabs.harvard.edu/abs/2012A%26A...545A..39R},
+  archiveprefix = {arXiv},
+  doi           = {10.1051/0004-6361/201219073},
+  eid           = {A39},
+  eprint        = {1208.4606},
+  keywords      = {radiative transfer, galaxies: structure, infrared: ISM},
+  primaryclass  = {astro-ph.GA},
 }
 
 @ARTICLE{Fragione:2017rsp,
@@ -3349,26 +3344,22 @@ archivePrefix = "arXiv",
 	Year = {2012},
 	Bdsk-Url-1 = {http://stacks.iop.org/0004-637X/750/i=1/a=3}}
 
-@ARTICLE{Casandjian:andFermiLat2016,
-   author = {{Acero}, F. and {Ackermann}, M. and {Ajello}, M. and {Albert}, A. and 
-	{Baldini}, L. and {Ballet}, J. and {Barbiellini}, G. and {Bastieri}, D. and 
-	{Bellazzini}, R. and {Bissaldi}, E. and {Bloom}, E.~D. and {Bonino}, R. and 
-	{Bottacini}, E. and {Brandt}, T.~J. and {Bregeon}, J. and {Bruel}, P. and et al. 
-	},
-    title = "{Development of the Model of Galactic Interstellar Emission for Standard Point-source Analysis of Fermi Large Area Telescope Data}",
-  journal = {Astrophys. J. Supp.},
-archivePrefix = "arXiv",
-   eprint = {1602.07246},
- primaryClass = "astro-ph.HE",
- keywords = {gamma rays: diffuse background, gamma rays: general, gamma rays: ISM},
-     year = 2016,
-    month = apr,
-   volume = 223,
-      eid = {26},
-    pages = {26},
-      doi = {10.3847/0067-0049/223/2/26},
-   adsurl = {http://adsabs.harvard.edu/abs/2016Astrophys. J.S..223...26A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@Article{Casandjian:andFermiLat2016,
+  author        = {{Acero}, F. and {Ackermann}, M. and {Ajello}, M. and {Albert}, A. and {Baldini}, L. and {Ballet}, J. and {Barbiellini}, G. and {Bastieri}, D. and {Bellazzini}, R. and {Bissaldi}, E. and {Bloom}, E.~D. and {Bonino}, R. and {Bottacini}, E. and {Brandt}, T.~J. and {Bregeon}, J. and {Bruel}, P. and et al.},
+  journal       = {Astrophys. J. Supp.},
+  title         = {{Development of the Model of Galactic Interstellar Emission for Standard Point-source Analysis of Fermi Large Area Telescope Data}},
+  year          = {2016},
+  month         = apr,
+  pages         = {26},
+  volume        = {223},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl        = {http://adsabs.harvard.edu/abs/2016Astrophys. J.S..223...26A},
+  archiveprefix = {arXiv},
+  doi           = {10.3847/0067-0049/223/2/26},
+  eid           = {26},
+  eprint        = {1602.07246},
+  keywords      = {gamma rays: diffuse background, gamma rays: general, gamma rays: ISM},
+  primaryclass  = {astro-ph.HE},
 }
 
 @article{deNaurois:2015oda,
@@ -3398,20 +3389,24 @@ archivePrefix = "arXiv",
     pages = "023014",
     year = "2020"
 }
-@ARTICLE{Coronado-Blazquez:2021avx,
-       author = {{Coronado-Bl{\'a}zquez}, Javier and {Doro}, Michele and {S{\'a}nchez-Conde}, Miguel A. and {Aguirre-Santaella}, Alejandra},
-        title = "{Sensitivity of the Cherenkov Telescope Array to dark subhalos}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics},
-         year = 2021,
-        month = jan,
-          eid = {arXiv:2101.10003},
-        pages = {arXiv:2101.10003},
-archivePrefix = {arXiv},
-       eprint = {2101.10003},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210110003C},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+
+@InProceedings{Coronado-Blazquez:2021avx,
+  author        = {Javier Coronado-Bl{\'{a}}zquez and Michele Doro and Miguel A. S{\'{a}}nchez-Conde and Alejandra Aguirre-Santaella},
+  booktitle     = {Proceedings of 37th International Cosmic Ray Conference {\textemdash} {PoS}({ICRC}2021)},
+  title         = {Sensitivity of the Cherenkov Telescope Array to dark subhalos},
+  year          = {2021},
+  month         = jul,
+  pages         = {arXiv:2101.10003},
+  publisher     = {Sissa Medialab},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2021arXiv210110003C},
+  archiveprefix = {arXiv},
+  doi           = {10.22323/1.395.0544},
+  eid           = {arXiv:2101.10003},
+  eprint        = {2101.10003},
+  journal       = {arXiv e-prints},
+  keywords      = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics},
+  primaryclass  = {astro-ph.HE},
 }
 
 
@@ -3980,18 +3975,17 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@INPROCEEDINGS{1995ASPC...80..507H,
-   author = {{Heiles}, C.},
-    title = "{The Galactic B-Field (GBF)}",
-booktitle = {The Physics of the Interstellar Medium and Intergalactic Medium},
-     year = 1995,
-   series = {Astronomical Society of the Pacific Conference Series},
-   volume = 80,
-   editor = {{Ferrara}, A. and {McKee}, C.~F. and {Heiles}, C. and {Shapiro}, P.~R.
-	},
-    pages = {507},
-   adsurl = {http://adsabs.harvard.edu/abs/1995ASPC...80..507H},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@InProceedings{1995ASPC...80..507H,
+  author    = {{Heiles}, C.},
+  booktitle = {The Physics of the Interstellar Medium and Intergalactic Medium},
+  title     = {{The Galactic B-Field (GBF)}},
+  year      = {1995},
+  editor    = {{Ferrara}, A. and {McKee}, C.~F. and {Heiles}, C. and {Shapiro}, P.~R.},
+  pages     = {507},
+  series    = {Astronomical Society of the Pacific Conference Series},
+  volume    = {80},
+  adsnote   = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl    = {http://adsabs.harvard.edu/abs/1995ASPC...80..507H},
 }
 
 @article{Strong:1998fr,
@@ -4010,21 +4004,21 @@ booktitle = {The Physics of the Interstellar Medium and Intergalactic Medium},
       SLACcitation   = "%%CITATION = ASTRO-PH/9811296;%%"
 }
 
-@ARTICLE{Pohl2008,
-	author = {{Pohl}, M. and {Englmaier}, P. and {Bissantz}, N.},
-	title = "{Three-Dimensional Distribution of Molecular Gas in the Barred Milky Way}",
-	journal = {Astrophys.~J.},
-	archivePrefix = "arXiv",
-	eprint = {0712.4264},
-	keywords = {Galaxy: kinematics and dynamics, ISM: structure },
-	year = 2008,
-	month = apr,
-	volume = 677,
-	eid = {283-291},
-	pages = {283-291},
-	doi = {10.1086/529004},
-	adsurl = {http://adsabs.harvard.edu/abs/2008Astrophys. J....677..283P},
-	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@Article{Pohl2008,
+  author        = {{Pohl}, M. and {Englmaier}, P. and {Bissantz}, N.},
+  journal       = {Astrophys.~J.},
+  title         = {{Three-Dimensional Distribution of Molecular Gas in the Barred Milky Way}},
+  year          = {2008},
+  month         = apr,
+  pages         = {283-291},
+  volume        = {677},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl        = {http://adsabs.harvard.edu/abs/2008Astrophys. J....677..283P},
+  archiveprefix = {arXiv},
+  doi           = {10.1086/529004},
+  eid           = {283-291},
+  eprint        = {0712.4264},
+  keywords      = {Galaxy: kinematics and dynamics, ISM: structure},
 }
 
 @article{Leane:2019xiy,
@@ -29929,3 +29923,4 @@ url = {http://adsabs.harvard.edu/abs/2007LPI....38.2214P},
 uri = {\url{papers3://publication/uuid/180AD9BA-64BE-4137-AE86-0149BAF8F15C}}
 }
 
+@Comment{jabref-meta: databaseType:bibtex;}
