--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -3424,18 +3424,21 @@ archivePrefix = "arXiv",
     year = "2016"
 }
 
-@article{Acharyya:2020sbj,
-    author = "Acharyya, A. and others",
-    collaboration = "CTA",
-    title = "{Sensitivity of the Cherenkov Telescope Array to a dark matter signal from the Galactic centre}",
-    eprint = "2007.16129",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.HE",
-    doi = "10.1088/1475-7516/2021/01/057",
-    journal = "JCAP",
-    volume = "01",
-    pages = "057",
-    year = "2021"
+@Article{Acharyya:2020sbj,
+  author        = {A. Acharyya and R. Adam and C. Adams and I. Agudo and A. Aguirre-Santaella and R. Alfaro and J. Alfaro and C. Alispach and R. Aloisio and R. Alves Batista and L. Amati and G. Ambrosi and E.O. Angüner and L.A. Antonelli and C. Aramo and A. Araudo and T. Armstrong and F. Arqueros and K. Asano and Y. Ascas{\'{\i}}bar and M. Ashley and C. Balazs and O. Ballester and A. Baquero Larriva and V. Barbosa Martins and M. Barkov and U. Barres de Almeida and J.A. Barrio and D. Bastieri and J. Becerra and G. Beck and J. Becker Tjus and W. Benbow and M. Benito and D. Berge and E. Bernardini and K. Bernlöhr and A. Berti and B. Bertucci and V. Beshley and B. Biasuzzi and A. Biland and E. Bissaldi and J. Biteau and O. Blanch and J. Blazek and F. Bocchino and C. Boisson and L. Bonneau Arbeletche and P. Bordas and Z. Bosnjak and E. Bottacini and V. Bozhilov and J. Bregeon and A. Brill and T. Bringmann and A.M. Brown and P. Brun and F. Brun and P. Bruno and A. Bulgarelli and M. Burton and A. Burtovoi and M. Buscemi and R. Cameron and M. Capasso and A. Caproni and R. Capuzzo-Dolcetta and P. Caraveo and R. Carosi and A. Carosi and S. Casanova and E. Cascone and F. Cassol and F. Catalani and D. Cauz and M. Cerruti and P. Chadwick and S. Chaty and A. Chen and M. Chernyakova and G. Chiaro and A. Chiavassa and M. Chikawa and J. Chudoba and M. {\c{C}}olak and V. Conforti and R. Coniglione and F. Conte and J.L. Contreras and J. Coronado-Blazquez and A. Costa and H. Costantini and G. Cotter and P. Cristofari and A. D{\textquotesingle}A𝚤 and F. D{\textquotesingle}Ammando and L.A. Damone and M.K. Daniel and F. Dazzi and A. De Angelis and V. De Caprio and R. de C{\'{a}}ssia dos Anjos and E.M. de Gouveia Dal Pino and B. De Lotto and D. De Martino and E. de O{\~{n}}a Wilhelmi and F. De Palma and V. de Souza and C. Delgado and A.G. Delgado Giler and D. della Volpe and D. Depaoli and T. Di Girolamo and F. Di Pierro and L. Di Venere and S. Diebold and A. Dmytriiev and A. Dom{\'{\i}}nguez and A. Donini and M. Doro and J. Ebr and C. Eckner and T. D. P. Edwards and T.R.N. Ekoume and D. Elsässer and C. Evoli and D. Falceta-Goncalves and E. Fedorova and S. Fegan and Q. Feng and G. Ferrand and G. Ferrara and E. Fiandrini and A. Fiasson and M. Filipovic and V. Fioretti and M. Fiori and L. Foffano and G. Fontaine and O. Fornieri and F.J. Franco and S. Fukami and Y. Fukui and D. Gaggero and G. Galaz and V. Gammaldi and E. Garcia and M. Garczarczyk and D. Gascon and A. Gent and A. Ghalumyan and F. Gianotti and M. Giarrusso and G. Giavitto and N. Giglietto and F. Giordano and A. Giuliani and J. Glicenstein and R. Gnatyk and P. Goldoni and M.M. Gonz{\'{a}}lez and K. Gourgouliatos and J. Granot and D. Grasso and J. Green and A. Grillo and O. Gueta and S. Gunji and A. Halim and T. Hassan and M. Heller and S. Hern{\'{a}}ndez Cadena and N. Hiroshima and B. Hnatyk and W. Hofmann and J. Holder and D. Horan and J. Hörandel and P. Horvath and T. Hovatta and M. Hrabovsky and D. Hrupec and G. Hughes and T.B. Humensky and M. Hütten and M. Iarlori and T. Inada and S. Inoue and F. Iocco and M. Iori and M. Jamrozy and P. Janecek and W. Jin and L. Jouvin and J. Jurysek and E. Karukes and K. Katarzy{\'{n}}ski and D. Kazanas and D. Kerszberg and M.C. Kherlakian and R. Kissmann and J. Knödlseder and Y. Kobayashi and K. Kohri and N. Komin and H. Kubo and J. Kushida and G. Lamanna and J. Lapington and P. Laporte and M.A. Leigui de Oliveira and J. Lenain and F. Leone and G. Leto and E. Lindfors and T. Lohse and S. Lombardi and F. Longo and A. Lopez and M. L{\'{o}}pez and R. L{\'{o}}pez-Coto and S. Loporchio and P.L. Luque-Escamilla and E. Mach and C. Maggio and G. Maier and M. Mallamaci and R. Malta Nunes de Almeida and D. Mandat and M. Manganaro and S. Mangano and G. Manic{\`{o}} and M. Marculewicz and M. Mariotti and S. Markoff and P. Marquez and J. Mart{\'{\i}} and O. Martinez and M. Mart{\'{\i}}nez and G. Mart{\'{\i}}nez and H. Mart{\'{\i}}nez-Huerta and G. Maurin and D. Mazin and J.D. Mbarubucyeye and D. Medina Miranda and M. Meyer and M. Miceli and T. Miener and M. Minev and J.M. Miranda and R. Mirzoyan and T. Mizuno and B. Mode and R. Moderski and L. Mohrmann and E. Molina and T. Montaruli and A. Moralejo and D. Morcuende-Parrilla and A. Morselli and R. Mukherjee and C. Mundell and A. Nagai and T. Nakamori and R. Nemmen and J. Niemiec and D. Nieto and M. Niko{\l}ajuk and D. Ninci and K. Noda and D. Nosek and S. Nozaki and Y. Ohira and M. Ohishi and Y. Ohtani and T. Oka and A. Okumura and R.A. Ong and M. Orienti and R. Orito and M. Orlandini and S. Orlando and E. Orlando and M. Ostrowski and I. Oya and I. Pagano and A. Pagliaro and M. Palatiello and F.R. Pantaleo and J.M. Paredes and G. Pareschi and N. Parmiggiani and B. Patricelli and L. Pavleti{\'{c}} and A. Pe{\textquotesingle}er and M. Pecimotika and J. P{\'{e}}rez-Romero and M. Persic and O. Petruk and K. Pfrang and G. Piano and P. Piatteli and E. Pietropaolo and R. Pillera and B. Pilszyk and F. Pintore and M. Pohl and V. Poireau and R.R. Prado and E. Prandini and J. Prast and G. Principe and H. Prokoph and M. Prouza and H. Przybilski and G. Pühlhofer and M.L. Pumo and F. Queiroz and A. Quirrenbach and S. Rain{\`{o}} and R. Rando and S. Razzaque and S. Recchia and O. Reimer and A. Reisenegger and Y. Renier and W. Rhode and D. Ribeiro and M. Rib{\'{o}} and T. Richtler and J. Rico and F. Rieger and L. Rinchiuso and V. Rizi and J. Rodriguez and G. Rodriguez Fernandez and J.C. Rodriguez Ramirez and G. Rojas and P. Romano and G. Romeo and J. Rosado and G. Rowell and B. Rudak and F. Russo and I. Sadeh and E. S{\ae}ther Hatlen and S. Safi-Harb and F. Salesa Greus and G. Salina and D. Sanchez and M. S{\'{a}}nchez-Conde and P. Sangiorgi and H. Sano and M. Santander and E.M. Santos and R. Santos-Lima and A. Sanuy and S. Sarkar and F.G. Saturni and U. Sawangwit and F. Schussler and U. Schwanke and E. Sciacca and S. Scuderi and M. Seglar-Arroyo and O. Sergijenko and M. Servillat and K. Seweryn and A. Shalchi and P. Sharma and R.C. Shellard and H. Siejkowski and J. Silk and C. Siqueira and V. Sliusar and A. S{\l}owikowska and A. Sokolenko and H. Sol and S. Spencer and A. Stamerra and S. Stani{\v{c}} and R. Starling and T. Stolarczyk and U. Straumann and J. Stri{\v{s}}kovi{\'{c}} and Y. Suda and T. Suomijarvi and P. {\'{S}}wierk and F. Tavecchio and L. Taylor and L.A. Tejedor and M. Teshima and V. Testa and L. Tibaldo and C.J. Todero Peixoto and F. Tokanai and D. Tonev and G. Tosti and L. Tosti and N. Tothill and S. Truzzi and P. Travnicek and V. Vagelli and B. Vallage and P. Vallania and C. van Eldik and J. Vandenbroucke and G.S. Varner and V. Vassiliev and M. V{\'{a}}zquez Acosta and M. Vecchi and S. Ventura and S. Vercellone and S. Vergani and G. Verna and A. Viana and C.F. Vigorito and J. Vink and V. Vitale and S. Vorobiov and I. Vovk and T. Vuillaume and S.J. Wagner and R. Walter and J. Watson and C. Weniger and R. White and M. White and R. Wiemann and A. Wierzcholska and M. Will and D.A. Williams and R. Wischnewski and S. Yanagita and L. Yang and T. Yoshikoshi and M. Zacharias and G. Zaharijas and A.A. Zakaria and L. Zampieri and R. Zanin and D. Zaric and M. Zavrtanik and D. Zavrtanik and A.A. Zdziarski and A. Zech and H. Zechlin and V.I. Zhdanov and M. {\v{Z}}ivec},
+  journal       = {Journal of Cosmology and Astroparticle Physics},
+  title         = {Sensitivity of the Cherenkov Telescope Array to a dark matter signal from the Galactic centre},
+  year          = {2021},
+  month         = {jan},
+  number        = {01},
+  pages         = {057--057},
+  volume        = {2021},
+  archiveprefix = {arXiv},
+  collaboration = {CTA},
+  doi           = {10.1088/1475-7516/2021/01/057},
+  eprint        = {2007.16129},
+  primaryclass  = {astro-ph.HE},
+  publisher     = {{IOP} Publishing},
 }
 @ARTICLE{Su_etal:2010,
        author = {{Su}, Meng and {Slatyer}, Tracy R. and {Finkbeiner}, Douglas P.},
